src/tests/snapshots/gitu__tests__commit__commit_instant_fixup.snap
---
source: src/tests/commit.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 2809bd7 main modify instant_fixup.txt                           Author Name __ |
 fa09c62 add instant_fixup.txt                                   Author Name __ |
▌b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git commit --fixup efc77f3bea683ce4ea27f2e9d7d1bdf04c91a57f                   |
[main eac3fc0] fixup! modify instant_fixup.txt                                  |
 Author: Author Name <author@email.com>                                         |
 1 file changed, 1 insertion(+), 1 deletion(-)                                  |
$ git rebase -i -q --autostash --keep-empty --autosquash                        |
efc77f3bea683ce4ea27f2e9d7d1bdf04c91a57f^                                       |
styles_hash: d392f921a090c51
