src/tests/snapshots/gitu__tests__commit__commit_instant_fixup_stashes_changes_and_keeps_empty.snap
---
source: src/tests/commit.rs
expression: ctx.redact_buffer()
---
                                                                                |
 Unstaged changes (1)                                                           |
 modified   instant_fixup.txt                                                   |
 @@ -1 +1 @@                                                                    |
 -fixed                                                                         |
 +unstaged                                                                      |
                                                                                |
 Recent commits                                                                 |
 bada738 main empty commit                                       Author Name __ |
 2809bd7 modify instant_fixup.txt                                Author Name __ |
 fa09c62 add instant_fixup.txt                                   Author Name __ |
────────────────────────────────────────────────────────────────────────────────|
$ git commit --fixup efc77f3bea683ce4ea27f2e9d7d1bdf04c91a57f                   |
[main bec1be7] fixup! modify instant_fixup.txt                                  |
 Author: Author Name <author@email.com>                                         |
 1 file changed, 1 insertion(+), 1 deletion(-)                                  |
$ git rebase -i -q --autostash --keep-empty --autosquash                        |
efc77f3bea683ce4ea27f2e9d7d1bdf04c91a57f^                                       |
Applied autostash.                                                              |
Created autostash: d682ced                                                      |
styles_hash: 903012281066b556
