src/tests/snapshots/gitu__tests__commit__commit_menu.snap
---
source: src/tests/commit.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
 added      new_file.txt…                                                       |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Commit             Arguments                                                   |
 c     Commit       -a Stage all modified and deleted files (--all)             |
 a     amend        -e Allow empty commit (--allow-empty)                       |
 e     extend       -n Disable hooks (--no-verify)                              |
 q/esc Quit/Close   -R Claim authorship and reset author date (--reset-author)  |
                    -s Add Signed-off-by line (--signoff)                       |
                    -v Show diff of changes to be committed (--verbose)         |
styles_hash: 178efd168e126b3e
